feat: flesh out Governance and Create a proposal pages

--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -47,8 +47,11 @@ claim rewards, and manage your validator profile.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/validators/onboarding/become-validator'),
-    findSidebarItem('/docs/category/applications'),
-    findSidebarItem('/docs/category/roles'),
+    findSidebarItem('/docs/category/stake-1'),
+    findSidebarItem('/docs/category/rewards'),
+    findSidebarItem('/docs/category/manage-profile'),
+    findSidebarItem('/docs/category/slashing-and-bailout'),
+    findSidebarItem('/docs/category/governance'),
     ]} />
 
 ### Build on Ronin
@@ -61,9 +64,9 @@ If you're looking to build a decentralized application on Ronin, these guides ar
 
 ### Join the community
 Learn how to get in touch with the Ronin community and
-how to contribute to the network.
+how to contribute to the documentation.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/community/join'),
-    findSidebarItem('/docs/category/contribution'),
+    findSidebarItem('/docs/category/become-a-contributor'),
     ]} />
