fix: broken links

--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -62,7 +62,7 @@ If you're looking to build a decentralized application on Ronin, these guides ar
     findSidebarItem('/docs/category/ronin-wallet'),
     ]} />
 
-### Join the community
+### Get involved
 Learn how to get in touch with the Ronin community and
 how to contribute to the documentation.
 
