refactor: remove the word 'category' from slugs for delegator, validator, developer, community, resources

--- a/docs/validators/manage/activity.mdx
+++ b/docs/validators/manage/activity.mdx
@@ -3,12 +3,12 @@ description: View your activity on Ronin
 title: View activity
 ---
 
-import activities from './assets/activities.png';
+import activity from './assets/activity.png';
 
-# View activities
+# View activity
 
-You can view all your staking activities,
+You can view all your activity, such as staking operations,
 reward claims, and reward distributions,
 by going to the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Activities**.
 
-<img src={activities} width={1280} />
+<img src={activity} width={1280} />
