--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -16,13 +16,18 @@ the Sky Mavis team for renunciation.
 
 <img src={StepOne} width={480} />
 
-2. Read through the explanation and confirm your decision. Keep in mind that you won’t be able to cancel or undo this action.
+2. Read through the explanation and confirm your decision. Keep in mind
+that you won’t be able to cancel or undo this action.
 
 <img src={StepTwo} width={560} />
 
 3. Click **Renounce** to submit the request.
 
-After submission, you will need to wait for seven days for renunciation to take effect. All the commission, bridge rewards, staking rewards and the remaining self-stake will be transferred to you automatically on the date of renunciation.
+After submission, you will need to wait for seven days for renunciation
+to take effect. 
+All the commission, bridge rewards, staking rewards and the remaining
+self-stake will be transferred to you automatically on the date of
+renunciation.
 
 :::caution
 Because your role remains active during the seven-day waiting period,
