--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -31,7 +31,7 @@ There are three validator roles:
 3. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/validator-setup-t.md) and [Run a bridge operator node](./../../node-operators/bridge-setup-t.md), respectively.
 <img src={stepTwo} width={1280} />
 
-4. Fill in your [addresses](./../manage-profile/profile.mdx) and specify your commission rate.
+4. Fill in your [addresses](./../manage/profile.mdx) and specify your commission rate.
 <img src={stepThree} width={1280} />
 
 5. Provide the initial stake of RON.
