--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -1,5 +1,6 @@
 ---
 description: Slashing penalties for validators and bridge operators
+slug: overview
 ---
 
 import doubleSign from './assets/double-sign.png';
