--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -25,7 +25,7 @@ how to delegate your stake and transfer it between validators.
 <DocCardList items={[ 
     findSidebarItem('/docs/delegators/onboarding/purchase'),
     findSidebarItem('/docs/delegators/onboarding/become-delegator'),
-    findSidebarItem('/docs/category/stake'),
+    findSidebarItem('/docs/delegators/stake'),
     findSidebarItem('/docs/delegators/rewards/claim'),
     findSidebarItem('/docs/delegators/faq'),
     ]} />
@@ -47,19 +47,19 @@ claim rewards, and manage your validator profile.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/validators/onboarding/become-validator'),
-    findSidebarItem('/docs/category/stake-1'),
-    findSidebarItem('/docs/category/rewards'),
-    findSidebarItem('/docs/category/manage-profile'),
-    findSidebarItem('/docs/category/slashing-and-bailout'),
-    findSidebarItem('/docs/category/governance'),
+    findSidebarItem('/docs/validators/stake'),
+    findSidebarItem('/docs/validators/rewards'),
+    findSidebarItem('/docs/validators/manage'),
+    findSidebarItem('/docs/validators/slashing'),
+    findSidebarItem('/docs/validators/governance'),
     ]} />
 
 ### Build on Ronin
 If you're looking to build a decentralized application on Ronin, these guides are for you.
 
 <DocCardList items={[ 
-    findSidebarItem('/docs/category/smart-contracts'),
-    findSidebarItem('/docs/category/ronin-wallet'),
+    findSidebarItem('/docs/developers/smart-contracts'),
+    findSidebarItem('/docs/developers/ronin-wallet'),
     ]} />
 
 ### Get involved
@@ -68,5 +68,5 @@ how to contribute to the documentation.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/community/join'),
-    findSidebarItem('/docs/category/contribute'),
+    findSidebarItem('/docs/community/contribute'),
     ]} />
