--- a/docs/validators/manage/commission.mdx
+++ b/docs/validators/manage/commission.mdx
@@ -2,9 +2,9 @@
 description: Adjust your commission rate
 ---
 
-import changeCommissionStepOne from './assets/change-commission-step-1.png';
-import changeCommissionStepTwo from './assets/change-commission-step-2.png';
-import changeCommissionStepThree from './assets/change-commission-step-3.png';
+import stepOne from './assets/change-commission-step-1.png';
+import stepTwo from './assets/change-commission-step-2.png';
+import stepThree from './assets/change-commission-step-3.png';
 
 # Change commission rate
 When registering to become a validator, you were asked to set a
@@ -16,14 +16,14 @@ The valid range is 0-20%.
 
 1. Go to **My Profile > Commission rate**.
 
-<img src={changeCommissionStepOne} width={280} />
+<img src={stepOne} width={280} />
 
 2. Enter the new commission rate and set the date when it takes effect. 
 The date must be set at least seven days from the current date.
 
-<img src={changeCommissionStepTwo} width={416} />
+<img src={stepTwo} width={416} />
 
 After you save the new rate, a clock icon is displayed next to your
 current rate to inform the community of the upcoming change.
 
-<img src={changeCommissionStepThree} width={324} />
+<img src={stepThree} width={324} />
