--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -25,7 +25,7 @@ how to delegate your stake and transfer it between validators.
 <DocCardList items={[ 
     findSidebarItem('/docs/delegators/onboarding/purchase'),
     findSidebarItem('/docs/delegators/onboarding/become-delegator'),
-    findSidebarItem('/docs/category/stake'),
+    findSidebarItem('/docs/delegators/stake'),
     findSidebarItem('/docs/delegators/rewards/claim'),
     findSidebarItem('/docs/delegators/faq'),
     ]} />
@@ -47,23 +47,26 @@ claim rewards, and manage your validator profile.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/validators/onboarding/become-validator'),
-    findSidebarItem('/docs/category/applications'),
-    findSidebarItem('/docs/category/roles'),
+    findSidebarItem('/docs/validators/stake'),
+    findSidebarItem('/docs/validators/rewards'),
+    findSidebarItem('/docs/validators/manage'),
+    findSidebarItem('/docs/validators/slashing'),
+    findSidebarItem('/docs/validators/governance'),
     ]} />
 
 ### Build on Ronin
 If you're looking to build a decentralized application on Ronin, these guides are for you.
 
 <DocCardList items={[ 
-    findSidebarItem('/docs/category/smart-contracts'),
-    findSidebarItem('/docs/category/ronin-wallet'),
+    findSidebarItem('/docs/developers/smart-contracts'),
+    findSidebarItem('/docs/developers/ronin-wallet'),
     ]} />
 
-### Join the community
+### Get involved
 Learn how to get in touch with the Ronin community and
-how to contribute to the network.
+how to contribute to the documentation.
 
 <DocCardList items={[ 
     findSidebarItem('/docs/community/join'),
-    findSidebarItem('/docs/category/contribution'),
+    findSidebarItem('/docs/community/contribute'),
     ]} />
