--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -28,13 +28,13 @@ There are three validator roles:
 2. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./../../basics/white-paper.md).
 <img src={stepOne} width={1280} />
 
-3. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/validator-setup-t.md) and [Run a bridge operator node](./../../node-operators/bridge-setup-t.md), respectively.
+1. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/testnet/validator.md) and [Run a bridge operator node](./../../node-operators/testnet/bridge.md), respectively.
 <img src={stepTwo} width={1280} />
 
-4. Fill in your [addresses](./../manage/profile.mdx) and specify your commission rate.
+1. Fill in your [addresses](./../manage/profile.mdx) and specify your commission rate.
 <img src={stepThree} width={1280} />
 
-5. Provide the initial stake of RON.
+1. Provide the initial stake of RON.
 <img src={stepFour} width={1280} />
 
 Done!
@@ -46,7 +46,7 @@ Done!
 Now that you're a Validator Candidate, we advise that you deposit some RON
 into the following addresses to avoid [bridge operator slashing](./../slashing/slashing.mdx)
 should you be selected as a validator:
-* Bridge operator address: RON is required to automatically sign transactions on the bridge every epoch.
-* Bridge voter address (if you’re a Governing Validator): RON is required to automatically sign transactions when syncing the set of bridge operators.
+* Bridge Operator address: RON is required to automatically sign transactions on the bridge every epoch.
+* Bridge Voter address (if you’re a Governing Validator): RON is required to automatically sign transactions when syncing the set of bridge operators.
 
 :::
