fix: add min balance to validator onboarding and refactor CLI page

--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -57,8 +57,7 @@ claim rewards, and manage your validator profile.
 If you're looking to build a decentralized application on Ronin, these guides are for you.
 
 <DocCardList items={[ 
-    findSidebarItem('/docs/developers/smart-contracts'),
-    findSidebarItem('/docs/developers/ronin-wallet'),
+    findSidebarItem('/docs/developers/portal'),
     ]} />
 
 ### Get involved
