refactor: add MDX tabs to the testnet validator guide

--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -32,7 +32,7 @@ applied to validators. It's also highly recommended that you read the
 [white paper](./../../basics/white-paper.md).
 <img src={stepOne} width={1280} />
 
-3\. Set up your [validator](./../../node-operators/testnet/validator.md)
+3\. Set up your [validator](./../../node-operators/testnet/validator.mdx)
 and [bridge operator](./../../node-operators/testnet/bridge.md) nodes.
 <img src={stepTwo} width={1280} />
 
