add custom stop signal for gratefulshut down

--- a/docs/node-operators/testnet/validator.mdx
+++ b/docs/node-operators/testnet/validator.mdx
@@ -87,6 +87,7 @@ vim docker-compose.yml
       node:
         image: ${NODE_IMAGE}
         stop_grace_period: 5m
+        stop_signal: SIGINT
         hostname: node
         container_name: node
         ports:
@@ -153,6 +154,7 @@ vim docker-compose.yml
       node:
         image: ${NODE_IMAGE}
         stop_grace_period: 5m
+        stop_signal: SIGINT
         hostname: node
         container_name: node
         ports:
