--- a/docs/node-operators/mainnet/validator.mdx
+++ b/docs/node-operators/mainnet/validator.mdx
@@ -84,6 +84,7 @@ vim docker-compose.yml
       node:
         image: ${NODE_IMAGE}
         stop_grace_period: 5m
+        stop_signal: SIGINT
         hostname: node
         container_name: node
         ports:
@@ -150,6 +151,7 @@ vim docker-compose.yml
       node:
         image: ${NODE_IMAGE}
         stop_grace_period: 5m
+        stop_signal: SIGINT
         hostname: node
         container_name: node
         ports:
