--- a/docs/node-operators/mainnet/validator.mdx
+++ b/docs/node-operators/mainnet/validator.mdx
@@ -6,7 +6,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Run a validator node
-This page describes how to set up and run a validator node on testnet.
+This page describes how to set up and run a validator node on mainnet.
 
 You can do that in one of the two ways:
 * Run a validator node *and* a bridge operator node in one Docker container.
@@ -30,9 +30,6 @@ You can do that in one of the two ways:
 * [https://github.com/axieinfinity/ronin/releases/tag/v2.5.1](https://github.com/axieinfinity/ronin/releases/tag/v2.5.1)
 * [ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9](https://github.com/axieinfinity/ronin/pkgs/container/ronin/69326810?tag=v2.5.1-d1a6cc9)
 
-Snapshot: `https://storage.googleapis.com/testnet-chaindata/chaindata-4-1-2023.tar`
-Snapshot checksum using Md5sum: `f7b467cdc879e3ab2ade41a7d4a40653`.
-
 ### Bridge operator
 * [https://github.com/axieinfinity/bridge-v2/releases/tag/0.2.1](https://github.com/axieinfinity/bridge-v2/releases/tag/0.2.1)
 * [ghcr.io/axieinfinity/bridge:0.2.1-c15a725](https://github.com/axieinfinity/bridge-v2/pkgs/container/bridge/67046431?tag=0.2.1-c15a725)
@@ -41,9 +38,9 @@ Snapshot checksum using Md5sum: `f7b467cdc879e3ab2ade41a7d4a40653`.
 
 * You must be a root user.
 * Your machine must meet the minimum hardware requirements:
-  * 2 CPU cores
-  * 8 GB RAM
-  * 100 GB SSD
+  * 8 CPU cores
+  * 32 GB RAM
+  * 700 GB SSD
 * You need to have [docker-compose](https://docs.docker.com/compose/install/) installed.
 
 ## Set up and run
@@ -193,11 +190,11 @@ vim .env
   <TabItem value="together" label="Validator and bridge">
 
     # BOOTNODES address of the bootnode to connect to the network, will be auto-filled
-    BOOTNODES=enode://77e9cfce2d4c01c61115591984ca4012923c29846a7b66c775fed0cc8fe5f41b304a71e3e9433e067ea7ef86701c13992fefacf9e223786c62c530a7110e8142@35.224.85.190:30303
+    BOOTNODES=enode://cfa5f00c55eba79f359c9d95f5c0b2bb8e173867ffbb6e212c6799a52918502519e56650970e34caf1cd17418d4da46c3243588578886c3b4f8c42d1934bf108@104.198.242.88:30303,enode://f500391c41906a1dae249df084a3d1659fe602db671730b2778316114a5f7df44a0c6864a8dfffdc380fc81c6965dd911338e0e2591eb78a506857015d166250@34.135.18.26:30303,enode://fc7b8ceafe16e6f79ab2da3e73d0a3163d0c28efe0778863102f8f27758986fe28c1540a9a0bbdff29ab93ad1c5803462efe6c98165bbb404d9d099a55f1d2c9@130.211.208.201:30303
     # NETWORK_ID network id
-    NETWORK_ID=40925
+    NETWORK_ID=2020
     # Setting for oracle services, where staging = rinkey + testnet, and production = ethereum + mainnet.
-    DEPLOYMENT=test
+    DEPLOYMENT=production
     # Setting nodekey
     GASPRICE=20000000000
 
@@ -216,10 +213,9 @@ vim .env
 
     # Private key of validator address, without 0x. 
     VALIDATOR_PRIVATE_KEY=insert-your-validator-private-key
-    ETHEREUM_ENDPOINT=https://eth-goerli.g.alchemy.com/v2/your-ethereum-endpoint
+    ETHEREUM_ENDPOINT=https://eth-mainnet.g.alchemy.com/v2/your-ethereum-endpoint
     MINE=true
 
-    CONFIG_PATH=config.testnet.json
     NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9
     BRIDGE_IMAGE=ghcr.io/axieinfinity/bridge:0.2.1-c15a725
     VERBOSITY=3
@@ -229,8 +225,7 @@ vim .env
     RONIN_MAX_PROCESSING_TASKS=200
     ETHEREUM_GET_LOGS_BATCH_SIZE=100
     CHAIN_STATS_WS_SECRET=xQj2MZPaN6
-    CHAIN_STATS_WS_SERVER=saigon-stats.roninchain.com
-    GENESIS_PATH=testnet.json
+    CHAIN_STATS_WS_SERVER=stats.roninchain.com
 
     RONIN_PARAMS=--http.api eth,net,web3,consortium --miner.gaslimit 100000000 --miner.gasreserve 2000000
 
@@ -244,11 +239,11 @@ vim .env
   <TabItem value="separately" label="Validator only">
 
     # BOOTNODES address of the bootnode to connect to the network, will be auto-filled
-    BOOTNODES=enode://77e9cfce2d4c01c61115591984ca4012923c29846a7b66c775fed0cc8fe5f41b304a71e3e9433e067ea7ef86701c13992fefacf9e223786c62c530a7110e8142@35.224.85.190:30303
+    BOOTNODES=enode://cfa5f00c55eba79f359c9d95f5c0b2bb8e173867ffbb6e212c6799a52918502519e56650970e34caf1cd17418d4da46c3243588578886c3b4f8c42d1934bf108@104.198.242.88:30303,enode://f500391c41906a1dae249df084a3d1659fe602db671730b2778316114a5f7df44a0c6864a8dfffdc380fc81c6965dd911338e0e2591eb78a506857015d166250@34.135.18.26:30303,enode://fc7b8ceafe16e6f79ab2da3e73d0a3163d0c28efe0778863102f8f27758986fe28c1540a9a0bbdff29ab93ad1c5803462efe6c98165bbb404d9d099a55f1d2c9@130.211.208.201:30303
     # NETWORK_ID network id
-    NETWORK_ID=40925
+    NETWORK_ID=2020
     # Setting for oracle services, where staging = rinkey + testnet, and production = ethereum + mainnet.
-    DEPLOYMENT=test
+    DEPLOYMENT=production
     # Setting nodekey
     GASPRICE=20000000000
 
@@ -260,26 +255,16 @@ vim .env
     
     MINE=true
 
-    CONFIG_PATH=config.testnet.json
     NODE_IMAGE=ghcr.io/axieinfinity/ronin:v2.5.1-d1a6cc9
     VERBOSITY=3
 
     CHAIN_STATS_WS_SECRET=xQj2MZPaN6
-    CHAIN_STATS_WS_SERVER=saigon-stats.roninchain.com
-    GENESIS_PATH=testnet.json
+    CHAIN_STATS_WS_SERVER=stats.roninchain.com
 
     RONIN_PARAMS=--http.api eth,net,web3,consortium --miner.gaslimit 100000000 --miner.gasreserve 2000000
 
   </TabItem>
 </Tabs>
-
-7\. (Optional) Download the snapshot to save the time:
-
-```
-cd ~/.skymavis/chaindata/data/ronin/
-curl https://storage.googleapis.com/testnet-chaindata/chaindata-4-1-2023.tar -o chaindata.tar && tar -xvf chaindata.tar
-mv chaindata-4-1-2023 chaindata
-```
 
 8\. Start the node:
 
@@ -287,4 +272,4 @@ mv chaindata-4-1-2023 chaindata
 docker-compose up -d 
 ```
 
-After a few minutes, go to the [stats page](https://saigon-stats.roninchain.com/) to check the status of your node. If it's green, the node is connected and up to date with the network.
+After a few minutes, go to the [stats page](https://stats.roninchain.com/) to check the status of your node. If it's green, the node is connected and up to date with the network.
