feat: update screenshots in all delegator guides, change .md to .mdx

--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -27,6 +27,7 @@ how to delegate your stake and transfer it between validators.
     findSidebarItem('/docs/delegators/onboarding/become-delegator'),
     findSidebarItem('/docs/delegators/stake'),
     findSidebarItem('/docs/delegators/rewards/claim'),
+    findSidebarItem('/docs/delegators/manage/activity'),
     findSidebarItem('/docs/delegators/faq'),
     ]} />
 
