--- a/docs/delegators/onboarding/purchase-ron.mdx
+++ b/docs/delegators/onboarding/purchase-ron.mdx
@@ -1,31 +1,24 @@
 ---
 title: Buy RON
-description: Learn where to purchase RON
+description: Learn where to get RON
 ---
 import purchaseSite from './assets/purchase-site.png'
 import katanaSite from './assets/katana-site.png'
 
 # Buy RON
-
 RON is the native token of Ronin, and can be used to pay for gas fees and participate in staking. Like other cryptocurrencies, there are multiple ways to acquire RON on Ronin.
 
 ## Buy on a centralized exchange
-
 Centralized exchanges are businesses that allow you to buy RON with traditional currency. After purchasing RON from a centralized exchange, you can then send it back to your Ronin Wallet to enjoy Ronin dApps. Centralized exchanges can be restricted in certain geographical locations.
 
 Applicable fees differ between exchanges.
 
 Here's a list of exchanges that support RON:
-
-- [OKX](https://www.okx.com/)
-
-- [Gate.io](https://gate.io/)
-
-- [CoinEx](https://www.coinex.com/)
-
-- [MEXC Global](https://www.mexc.com/)
-
-- [Bitget](https://www.bitget.com/)
+* [OKX](https://www.okx.com/)
+* [Gate.io](https://gate.io/)
+* [CoinEx](https://www.coinex.com/)
+* [MEXC Global](https://www.mexc.com/)
+* [Bitget](https://www.bitget.com/)
 
 :::info
 If you are a centralized exchange looking to list RON, [contact us](mailto:hello@roninchain.com).
@@ -47,8 +40,8 @@ Katana is a decentralized token exchange on Ronin. It allows you to exchange RON
 
 Katana applies a trading fee of [0.3%](https://axie-infinity.gitbook.io/katana-docs/swap#token-pairs-and-fee) on each swap transaction. 
 
-To use Katana, visit [katana.roninchain.com](https://katana.roninchain.com/). You will need to [setup a Ronin Wallet](https://axie-infinity.gitbook.io/katana-docs/account-setup) before using Katana. 
+To use Katana, visit [katana.roninchain.com](https://katana.roninchain.com/). You will need to [set up a Ronin Wallet](https://axie-infinity.gitbook.io/katana-docs/account-setup) before using Katana. 
 
 <img src={katanaSite} width={1280} />
 
-Now that you have RON, stake your RON and earn rewards by [becoming a delegators](/docs/delegators/onboarding/become-delegator).
+Now that you have RON, stake your RON and earn rewards by [becoming a delegator](/docs/delegators/onboarding/become-delegator).
