--- a/docs/validators/rewards/claim.mdx
+++ b/docs/validators/rewards/claim.mdx
@@ -3,31 +3,34 @@ label: Claim rewards
 description: Claim staking rewards
 ---
 
-import automaticRewards from './assets/automatic-rewards.png';
 import stepOne from './assets/claim-step-1.png';
 import stepTwo from './assets/claim-step-2.png';
 import confirmTransaction from './assets/confirm-transaction.png';
 
 # Claim rewards
 
-## Claim commission and bridge rewards
-Commission and bridge rewards are transferred to you automatically at the end of each period (roughly at the end of each day), so no action is required from your side.
+## Commission and bridge rewards
+You don't need to claim commission and bridge rewards
+because they are transferred to you automatically
+in the end of each period (approximately one day). 
 
-<img src={automaticRewards} width={1280} />
+You can, however, keep track of these rewards under
+**My Staking** > **Activities**.
 
-## Claim staking rewards
-Staking rewards are calculated each period (roughly equal to one day) and displayed as “claimable rewards”. You need to claim these rewards manually.
+## Staking rewards
+Staking rewards are calculated each period (approximately one day)
+and displayed as “claimable rewards”.
 
-1. On the **My Staking** page, click **Claim all**.
+You need to claim these rewards manually.
 
-<img src={stepOne} width={480} />
+1. Go to [Validator Dashboard](https://validator.roninchain.com) >
+**My Staking** > **Claim all**.
+<img src={stepOne} width={1280} />
 
-2. Click **Claim now**.
-
-<img src={stepTwo} width={416} />
+2. Select **Claim now**.
+<img src={stepTwo} width={400} />
 
 3. Confirm the transaction.
-
-<img src={confirmTransaction} width={375} />
+<img src={confirmTransaction} width={400} />
 
 After the transaction is confirmed, the rewards are credited to your wallet.
