--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -21,26 +21,23 @@ if they miss no block. The validator loses 1 credit for every missed block.
 
 ## Check your credit score
 
-1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
-and select **My Staking**. 
+1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
+**My Staking**.
 2. Find your credit score under **CREDIT SCORE**, next to your total
 self-stake amount.
-
 <img src={creditScore} width={1280} />
 
 ## Use credit score to bail out
-
 It takes 5 credits to bail out for each epoch.
 
-1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
-and select **My Staking**.
-2. Locate the warning banner and click **Bail out**.
+1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
+**My Staking**.
 
-<img src={stepOne} width={1224} />
+2. Locate the warning banner and select **Bail out**.
+<img src={stepOne} width={1224} /> 
 
-3. Review the terms of bailout and click **Submit**.
-
-<img src={stepTwo} width={361} />
+3. Review the terms of bailout and click **Submit**. 
+<img src={stepTwo} width={400} />
 
 If you bail out on the same day you got slashed, you still receive 50%
 of the block reward (commission and staking) from the time you bailed
