--- a/docs/validators/stake/increase.mdx
+++ b/docs/validators/stake/increase.mdx
@@ -1,30 +1,26 @@
 ---
-description: Add more RON to your stake
+description: Increase your stake by depositing more RON
 ---
 import stepOne from './assets/increase-stake-step-1.png';
 import stepTwo from './assets/increase-stake-step-2.png';
 import confirmTransaction from './assets/confirm-transaction.png';
 
-# Increase stake
+# Stake more
+After becoming a validator, you can increase your self-stake of RON.
 
-After becoming a validator, you can increase your self-staked amount of RON.
+1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
+**My Staking** > **Stake more**.
+<img src={stepOne} width={1280} />
 
-1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
-and select **My Staking**.
-2. Click **Stake more**.
-
-<img src={stepOne} width={480} />
-
-3. Enter the amount and click **Stake**. The estimated reward is calculated
-based on your estimated APR (annual percentage rate),
+2. Enter the amount manually or choose **Max** to stake all available RON,
+and then select **Stake**. The estimated reward is
+calculated based on your estimated APR (annual percentage rate),
 so you can see how much RON will return from this stake.
+<img src={stepTwo} width={400} />
 
-<img src={stepTwo} width={416} />
-
-4. Confirm the transaction.
-
-<img src={confirmTransaction} width={375} />
+3. Confirm the transaction.
+<img src={confirmTransaction} width={400} />
 
 After the transaction is confirmed, you can review its details
 on the **Activities** tab or check the status in
-[Ronin Block Explorer](https://saigon-explorer.roninchain.com/).
+[Ronin Block Explorer](https://app.roninchain.com/dashboard).
