--- a/docs/validators/manage/activity.mdx
+++ b/docs/validators/manage/activity.mdx
@@ -6,9 +6,9 @@ title: View activity
 import activity from './assets/activity.png';
 
 # View activity
-
-You can view all your activity, such as staking operations,
-reward claims, and reward distributions,
-by going to the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Activities**.
+You can view your historical activity, such as staking operations,
+reward claims, and reward distributions, by going to
+[Validator Dashboard](https://validator.roninchain.com/) >
+**My Staking** > **Activities**.
 
 <img src={activity} width={1280} />
