--- a/docs/validators/manage/analytics.mdx
+++ b/docs/validators/manage/analytics.mdx
@@ -5,10 +5,10 @@ title: View analytics
 
 import analytics from './assets/analytics.png';
 
-# View your analytics
-
-You can view analytics about the rewards you earned and blocks you
-produced over different periods of time, by going to
-the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Analytics**.
+# View analytics
+You can view analytics about the rewards
+you earned and blocks you produced over different periods
+by going to [Validator Dashboard](https://validator.roninchain.com/) >
+**My Staking** > **Analytics**.
 
 <img src={analytics} width={1280} />
