--- a/docs/validators/manage/commission.mdx
+++ b/docs/validators/manage/commission.mdx
@@ -7,23 +7,22 @@ import stepTwo from './assets/change-commission-step-2.png';
 import stepThree from './assets/change-commission-step-3.png';
 
 # Change commission rate
-When registering to become a validator, you were asked to set a
-commission rate—the percentage of block rewards you receive
-before distributing the rest to your delegators.
+When [registering](./../onboarding/become-validator.mdx) to become
+a validator, you set a commission rate—the percentage of block rewards
+you receive before distributing the rest to your delegators.
 
-You can change the commission rate at your discretion. 
-The valid range is 0-20%.
+You can change this commission rate in your profile.
 
-1. Go to **My Profile > Commission rate**.
-
+1. Go to [Validator Dashboard](https://validator.roninchain.com) >
+**My Profile** > **Commission rate**.
 <img src={stepOne} width={280} />
 
-2. Enter the new commission rate and set the date when it takes effect. 
-The date must be set at least seven days from the current date.
-
+2. Enter the new commission rate in the range of 0-20%,
+and set the date it takes effect.
+This date must be at least seven days from today.
 <img src={stepTwo} width={416} />
 
-After you save the new rate, a clock icon is displayed next to your
+After you save the new rate, a clock icon is displayed next to the
 current rate to inform the community of the upcoming change.
 
 <img src={stepThree} width={324} />
