--- a/docs/validators/manage/profile.mdx
+++ b/docs/validators/manage/profile.mdx
@@ -7,19 +7,27 @@ import profile from './assets/profile.png';
 import governingAddresses from './assets/governing-addresses.png';
 
 # View your profile
-
-You can view the list of addresses linked to your validator account by going to your connected wallet and clicking **My profile**.
+You can view the list of addresses linked to your validator account
+by going to [Validator Dashboard](https://validator.roninchain.com) >
+your connected wallet > **My profile**.
 
 <img src={profile} width={280} />
 
-If you’re a Standard Validator or a Validator Candidate, your profile has a set of three different addresses:
+If you’re a Standard Validator or a Validator Candidate, 
+your profile has a set of three different addresses:
+* **Admin address.** The address used to manage your profile, 
+staking activities, and claiming rewards.
+* **Validator address.** The address used for producing blocks. 
+This address is displayed to delegators and also called “consensus address”.
+* **Bridge operator address.** The address used for operating
+[Ronin Bridge](https://bridge.roninchain.com/).
 
-* **Admin address.** The address to manage your profile, staking activities, and claiming rewards.
-* **Validator address.** The address used for minting blocks. This address is displayed to delegators and also called “consensus address”.
-* **Bridge operator address.** The address used for operating Ronin Bridge.
-
-If you’re a Governing Validator, your profile has an additional two addresses:
-* **Chain governor address.** The address used to create proposals and vote for changes.
-* **Bridge voter address.** The address used for syncing the set of bridge operators.
+If you’re a Governing Validator, your profile has an additional 
+two addresses:
+* **Chain governor address.** The address used to 
+[create proposals](./../governance/create.mdx) and
+[vote](./../governance/vote.mdx) on changes.
+* **Bridge voter address.** The address used for syncing
+the set of bridge operators.
 
 <img src={governingAddresses} width={416} />
