--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -1,5 +1,5 @@
 ---
-description: Renounce your role as a validator
+description: Renounce as a validator
 title: Renounce role
 ---
 
@@ -7,30 +7,26 @@ import StepOne from './assets/renounce-step-1.png';
 import StepTwo from './assets/renounce-step-2.png';
 
 # Renounce your role
-You can request renunciation of your role as a validator. 
+You can renounce your role as a validator. 
 If you're a Standard Validator or Validator Candidate, 
 follow this guide. If you’re a Governing Validator, contact 
 the Sky Mavis team for renunciation.
 
-1. Go to **My Staking**, expand the options, and select **Renounce**.
+1. Go to [Validator Dashboard](https://validator.roninchain.com) >
+**My Staking** > expand the options > **Renounce**.
+<img src={StepOne} width={1280} />
 
-<img src={StepOne} width={480} />
-
-2. Read through the explanation and confirm your decision. Keep in mind
-that you won’t be able to cancel or undo this action.
-
-<img src={StepTwo} width={560} />
+2. Confirm your decision. Keep in mind that renunciation
+is permanent and cannot be undone.
+<img src={StepTwo} width={500} />
 
 3. Click **Renounce** to submit the request.
 
-After submission, you will need to wait for seven days for renunciation
-to take effect. 
-All the commission, bridge rewards, staking rewards and the remaining
-self-stake will be transferred to you automatically on the date of
-renunciation.
-
 :::caution
-Because your role remains active during the seven-day waiting period,
-you're advised to keep your node online and up to date with the
-network to avoid slashing.
+After sumbitting the request, you need to wait seven days for
+renunciation to take effect. To avoid slashing, keep your node
+online and up to date during this period.
 :::
+
+Your commission, bridge rewards, staking rewards, and the remaining
+self-stake will be transferred to you on the date of renunciation.
