fix: all screenshots and links in delegator guides

--- a/docs/delegators/manage/activity.mdx
+++ b/docs/delegators/manage/activity.mdx
@@ -6,7 +6,9 @@ title: View activity
 import activity from './assets/activity.png';
 
 # View activity
-You can view all your activity, such as staking operations and 
-reward claims, by going to [RON staking](https://app.roninchain.com/staking) **> My Staking > Activity**.
+You can view your historical activity, such as staking operations and 
+reward claims, 
+by going to [RON staking](https://app.roninchain.com/staking) >
+**Activity**.
 
 <img src={activity} width={1440} />
