--- a/docs/delegators/onboarding/become-delegator.mdx
+++ b/docs/delegators/onboarding/become-delegator.mdx
@@ -11,38 +11,36 @@ import transactionSuccess from './assets/transaction-success.png'
 import validatorDetails from './assets/validator-details.png'
 
 # Become a delegator
-This page explains how to become a delegator and view your delegations on Ronin.
+This page explains how to delegate your RON stake to a validator for the first time.
+You can also learn how to view all your delegations.
 
 ## Prerequisites
 The only prerequisite is to have RON tokens in your Ronin Wallet.
 
 ## Delegate RON
 
-1. Go to [RON staking](https://app.roninchain.com/staking) and select **Connect wallet**.
-
+1. Go to [RON staking](https://app.roninchain.com/staking) >
+**Connect wallet**.
 <img src={stepOne} width={1440} />
 
-2. Switch to the **All validators** tab, pick a validator you want to delegate to, and then select **Delegate**.
-
+2. Switch to the **All validators** tab, pick a validator
+you want to delegate to, and then select **Delegate**.
 <img src={stepTwo} width={1440} />
-
-To learn more about a validator before making a decision, select the validator's name in the list to open the details page for that validator. You can also delegate from here.
-
+To learn more about a validator before making a decision,
+select the validator's name in the list to open the details
+page for that validator. You can also delegate from here.
 <img src={validatorDetails} width={1440} />
 
-3. Enter the amount of RON and select **Delegate** to initiate the transaction. To reveal your estimated monthly and daily earnings, click the arrow next to the estimated yearly rewards.
-
+3. Enter the amount manually or choose **Max** to stake all available RON,
+and then select **Delegate**. Expand the estimated yearly rewards to
+reveal your estimated monthly and daily earnings.
 <img src={stepThree} width={400} />
 
 4. Confirm the transaction.
-
 <img src={stepFour} width={400} />
 
-After the transaction is complete, the system displays a confirmation window.
-
-<img src={transactionSuccess} width={400} />
-
 ## View your delegations
-To view the list of validators that you delegated to, go to [RON staking](https://app.roninchain.com/staking) **> My staking**.
+To view the list of validators that you delegated to,
+go to [RON staking](https://app.roninchain.com/staking) > **My staking**.
 
 <img src={myStaking} width={1440} />
