--- a/docs/delegators/rewards/claim.mdx
+++ b/docs/delegators/rewards/claim.mdx
@@ -7,17 +7,16 @@ import stepThree from './assets/confirm-transaction.png'
 
 # Claim rewards
 
-1. Go to [RON staking](https://app.roninchain.com/staking) **> My staking**.
+1. Go to [RON staking](https://app.roninchain.com/staking) >
+**My staking**.
 2. Under **CLAIMABLE REWARDS**, select **Claim all**.
-
 <img src={stepOne} width={1440} />
 
 3. Select **Claim now**.
-
 <img src={stepTwo} width={400} />
 
 4. Confirm the transaction.
-
 <img src={stepThree} width={400} />
 
-After the transaction is complete, the rewards are credited to your Ronin Wallet.
+After the transaction is complete, the rewards are credited
+to your Ronin Wallet.
