--- a/docs/delegators/onboarding/purchase-ron.mdx
+++ b/docs/delegators/onboarding/purchase-ron.mdx
@@ -6,10 +6,16 @@ import purchaseSite from './assets/purchase-site.png'
 import katanaSite from './assets/katana-site.png'
 
 # Buy RON
-RON is the native token of Ronin, and can be used to pay for gas fees and participate in staking. Like other cryptocurrencies, there are multiple ways to acquire RON on Ronin.
+RON is the native token of Ronin, and can be used to pay for gas 
+fees and participate in staking. Like other cryptocurrencies, 
+there are multiple ways to acquire RON on Ronin.
 
 ## Buy on a centralized exchange
-Centralized exchanges are businesses that allow you to buy RON with traditional currency. After purchasing RON from a centralized exchange, you can then send it back to your Ronin Wallet to enjoy Ronin dApps. Centralized exchanges can be restricted in certain geographical locations.
+Centralized exchanges are businesses that allow you to buy RON
+with traditional currency. After purchasing RON from a centralized
+exchange, you can then send it back to your Ronin Wallet to enjoy
+Ronin dApps. Centralized exchanges can be restricted in certain
+geographical locations.
 
 Applicable fees differ between exchanges.
 
@@ -21,27 +27,43 @@ Here's a list of exchanges that support RON:
 * [Bitget](https://www.bitget.com/)
 
 :::info
-If you are a centralized exchange looking to list RON, [contact us](mailto:hello@roninchain.com).
+If you are a centralized exchange looking to list RON,
+[contact us](mailto:hello@roninchain.com).
 :::
 
 ## Buy on Purchase site
 
-Buy RON using a credit card, bank transfer, or popular online payment methods via the Purchase site. The Purchase site is powered by Ramp Network, which is a registered crypto assets business. Ramp Network is supported in [150+ countries](https://support.ramp.network/en/articles/433-supported-countries-territories-and-us-states-for-buying-and-selling-crypto).
+Buy RON using a credit card, bank transfer, or popular online payment
+methods via the Purchase site. The Purchase site is powered by
+Ramp Network, which is a registered crypto assets business.
+Ramp Network is supported in [150+ countries](https://support.ramp.network/en/articles/433-supported-countries-territories-and-us-states-for-buying-and-selling-crypto).
 
-The Purchase site applies a [Ramp Network fee](https://support.ramp.network/en/articles/10415-what-fees-does-ramp-charge-for-buying-and-selling-crypto#h_229ce448ff) to your transaction. The fee varies based on the payment method you choose.
+The Purchase site applies a [Ramp Network fee](https://support.ramp.network/en/articles/10415-what-fees-does-ramp-charge-for-buying-and-selling-crypto#h_229ce448ff)
+to your transaction. The fee varies based on the payment method you choose.
 
-The Purchase site can be accessed directly through the Ronin Wallet mobile app. To do so, visit **dApps** tab on your Ronin Wallet home page and select **Purchase**. Alternatively, you can access the purchase site at [purchase.roninchain.com](https://purchase.roninchain.com/).
+The Purchase site can be accessed directly through the Ronin Wallet mobile app.
+To do so, visit the **dApps** tab in your Ronin Wallet,
+and then select **Purchase**. Alternatively, you can access
+the site at [purchase.roninchain.com](https://purchase.roninchain.com/).
 
 <img src={purchaseSite} width={1280} />
 
 ## Swap on Katana
 
-Katana is a decentralized token exchange on Ronin. It allows you to exchange RON for other Ronin tokens using existing liquidity pools provided by the community. Katana is powered by smart contracts, which means there are fewer geographical restrictions. 
+Katana is a decentralized token exchange on Ronin. 
+It allows you to exchange RON for other Ronin tokens using existing
+liquidity pools provided by the community. Katana is powered by smart
+contracts, which means there are fewer geographical restrictions. 
 
-Katana applies a trading fee of [0.3%](https://axie-infinity.gitbook.io/katana-docs/swap#token-pairs-and-fee) on each swap transaction. 
+Katana applies a trading fee of
+[0.3%](https://axie-infinity.gitbook.io/katana-docs/swap#token-pairs-and-fee)
+on each swap transaction. 
 
-To use Katana, visit [katana.roninchain.com](https://katana.roninchain.com/). You will need to [set up a Ronin Wallet](https://axie-infinity.gitbook.io/katana-docs/account-setup) before using Katana. 
+To use Katana, visit [katana.roninchain.com](https://katana.roninchain.com/).
+You will need to [set up a Ronin Wallet](https://axie-infinity.gitbook.io/katana-docs/account-setup)
+before using Katana. 
 
 <img src={katanaSite} width={1280} />
 
-Now that you have RON, stake your RON and earn rewards by [becoming a delegator](/docs/delegators/onboarding/become-delegator).
+Now that you have RON, stake your RON and earn rewards by
+[becoming a delegator](/docs/delegators/onboarding/become-delegator.mdx).
