--- a/docs/delegators/stake/withdraw.mdx
+++ b/docs/delegators/stake/withdraw.mdx
@@ -5,24 +5,21 @@ description: Withdraw your stake partially or completely
 import stepOne from './assets/withdraw-step-1.png'
 import stepTwo from './assets/withdraw-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
-import transactionSuccess from './assets/transaction-success.png'
 
 # Withdraw stake
-You can withdraw your stake as long as it's been three days since your last stake.
+You can withdraw your stake partially or completely,
+as long as it's been three days since you last staked in.
 
-1. Go to [RON staking](https://app.roninchain.com/staking) **> My staking**.
-2. Pick the validator to withdraw the stake from, expand the options, and then select **Withdraw stake**. 
-
+1. Go to [RON staking](https://app.roninchain.com/staking) >
+**My staking**.
+2. Pick the validator to withdraw the stake from, expand the options,
+and then select **Withdraw stake**. 
 <img src={stepOne} width={1440} />
 
-3. Specify the amount of RON and click **Withdraw**. To withdraw your entire stake, choose **Max**.
-
+3. Enter the amount manually and select **Withdraw**.
+To withdraw your entire stake, select **Max**
+followed by **Withdraw and undelegate**.
 <img src={stepTwo} width={400} />
 
 4. Confirm the transaction.
-
 <img src={stepThree} width={400} />
-
-After the transaction is complete, the system displays a confirmation window.
-
-<img src={transactionSuccess} width={400} />
