feat: update wording in stake- and reward- related guides

--- a/docs/delegators/rewards/claim.mdx
+++ b/docs/delegators/rewards/claim.mdx
@@ -6,6 +6,8 @@ import stepTwo from './assets/claim-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
 # Claim rewards
+Staking rewards do not automatically re-stake to your validators,
+and instead need to be claimed manually.
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
@@ -17,6 +19,3 @@ import stepThree from './assets/confirm-transaction.png'
 
 4. Confirm the transaction.
 <img src={stepThree} width={400} />
-
-After the transaction is complete, the rewards are credited
-to your Ronin Wallet.
