--- a/docs/delegators/stake/increase.mdx
+++ b/docs/delegators/stake/increase.mdx
@@ -13,13 +13,13 @@ more RON to your validators.
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
 
-2. Pick the validator to increase the stake, expand the options,
-and then select **Delegate**. 
+2. Pick the validator where you want to stake more,
+expand the options, and then select **Delegate**.
 <img src={stepOne} width={1440} />
 
-2. Enter the amount manually or choose **Max** to stake all available RON,
-and then select **Stake**. The estimated reward is
-calculated based on your estimated APR (annual percentage rate),
+3. Enter the amount manually or choose **Max** to stake all your
+available RON, and then select **Delegate**. The estimated rewards are
+calculated based on your APR (annual percentage rate),
 so you can see how much RON will return from this stake.
 <img src={stepTwo} width={400} />
 
