--- a/docs/delegators/stake/move.mdx
+++ b/docs/delegators/stake/move.mdx
@@ -11,9 +11,11 @@ You can move your stake between different validators.
 For example, if a validator is renouncing or if you found
 another validator with higher returns.
 
-1. Go to [RON staking](https://app.roninchain.com/staking) > **My staking**.
-2. Pick the validator to move the stake from, expand the options,
-and then select **Move stake**. 
+1. Go to [RON staking](https://app.roninchain.com/staking) >
+**My staking**.
+
+2. Pick the validator from which you want to move the stake,
+expand the options, and then select **Move stake**.
 <img src={stepOne} width={1440} />
 
 3. Enter the amount manually and select **Move stake**.
