--- a/docs/delegators/stake/withdraw.mdx
+++ b/docs/delegators/stake/withdraw.mdx
@@ -7,13 +7,14 @@ import stepTwo from './assets/withdraw-step-2.png'
 import stepThree from './assets/confirm-transaction.png'
 
 # Withdraw stake
-You can withdraw your stake partially or completely,
-as long as it's been three days since you last staked in.
+You can withdraw a part of, or all of your stake from a validator,
+as long as it's been three days since your last staking operation on Ronin.
 
 1. Go to [RON staking](https://app.roninchain.com/staking) >
 **My staking**.
-2. Pick the validator to withdraw the stake from, expand the options,
-and then select **Withdraw stake**. 
+
+2. Pick the validator from which you want to withdraw the stake,
+expand the options, and then select **Withdraw stake**.
 <img src={stepOne} width={1440} />
 
 3. Enter the amount manually and select **Withdraw**.
