feat: populate 5/10 FAQ questions, add Security best practices page

--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -40,6 +40,8 @@ and perform queries on the network.
     findSidebarItem('/docs/node-operators/cli'),
     findSidebarItem('/docs/node-operators/mainnet'),
     findSidebarItem('/docs/node-operators/testnet'),
+    findSidebarItem('/docs/node-operators/security'),
+    findSidebarItem('/docs/node-operators/faq'),
     ]} />
 
 These guides describe how to register as a validator, stake tokens,
