fix: merge conflicts

--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -12,10 +12,12 @@ These guides provide general overview of Ronin and introduce basic tools
 to get you started.
 
 <DocCardList items={[ 
+    findSidebarItem('/docs/basics/introduction'),
     findSidebarItem('/docs/basics/key-concepts'),
-    findSidebarItem('/docs/category/basics'),
-    findSidebarItem('/docs/category/applications'),
-    findSidebarItem('/docs/category/roles'),
+    findSidebarItem('/docs/basics/white-paper'),
+    findSidebarItem('/docs/basics/tokenomics'),
+    findSidebarItem('/docs/basics/dapps'),
+    findSidebarItem('/docs/basics/roles'),
     ]} />
 
 ### Stake and delegate
