feat: populate validator FAQ and minor changes in the onboarding guide

--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -11,18 +11,28 @@ import stepFive from './assets/onboarding-step-5.png'
 
 # Become a validator
 This page explains how to register as a validator on Ronin.
+After following the steps in this guide, you'll become a
+Validator Candidate and have a chance to be selected as a
+Standard Validator on the next day.
 
 ## Validator roles
 There are three validator roles:
-* **Validator Candidate.** After following the steps in this guide, you'll become a Validator Candidate and have a chance to be selected as a Standard Validator on the next day.
-* **Standard Validator.** Every day, at least 10 Validator Candidates with the highest amount staked are selected as Standard Validators. The system records your total staking amount at 00:00 UTC every day for the selection process. 
-* **Governing Validator.** The validators chosen by the community and Sky Mavis to ensure network security. Governing Validators are validators by default, and they account for more than half of the total validator pool.
+* **Validator Candidate.** The role you get after following the steps
+in this guide.
+* **Standard Validator.** Every day, at least 10 Validator Candidates
+with the highest amount staked are selected as Standard Validators.
+The system records your total staking amount at 00:00 UTC every day
+for the selection process. 
+* **Governing Validator.** The validators chosen by the community and
+Sky Mavis to ensure network security. Governing Validators are
+validators by default, and they account for more than half of the
+total validator set.
 
 ## Prerequisites
 * You need to have an amount of RON sufficient for the initial stake.
 * You also need to have 100 RON as a starting balance to maintain the bridge. 
 
-## Register as a Validator Candidate
+## Fill in the form
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) > **Become a Validator**. 
 <img src={becomeValidator} width={1280} />
