add tabs to validator guides

--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -32,7 +32,7 @@ total validator set.
 * You need to have an amount of RON sufficient for the initial stake.
 * You also need to have 100 RON as a starting balance to maintain the bridge. 
 
-## Fill in the form
+## Register
 
 1. Go to [Validator Dashboard](https://validator.roninchain.com/) > **Become a Validator**. 
 <img src={becomeValidator} width={1280} />
